--- a/client/src/Navbar.css
+++ b/client/src/Navbar.css
@@ -15,6 +15,10 @@
     display: inline;
   }
   
+  .navbar p {
+    color: white;
+  }
+
   .navbar a {
     color: white;
     text-decoration: none;
